# passquito

./: .gitignore  .npmrc  README.md  interactions-under-the-hood.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: publish-developer-packages.yml  publish-passquito-cdk-construct.yml  publish-passquito-client-js.yml  test-passquito-cdk-construct.yml
app/: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: auth-config.example.ts  main.ts
app/src/assets/: main.css
app/src/composables/: webauthn.ts
app/src/router/: index.ts
app/src/stores/: credential.ts  credentials-api.ts  passkey-capability.ts  passquito-client.ts
app/src/utils/: credentials-api-impl.ts  credentials-api.ts  errors.ts  passquito-client.ts  passquito-types.ts  passquito.ts  serializer.ts
app/src/views/: InviteDevice.vue  RegisterDevice.vue  Secured.vue  SignIn.vue  SignInDummy.vue  SignUp.vue
cdk/: README.md  package.json  pnpm-lock.yaml
cdk/lambda/authentication/: Cargo.toml
cdk/lambda/authentication/src/: error.rs  error_response.rs  event.rs  lib.rs  parameters.rs  sdk_error_ext.rs
cdk/lambda/secured/: Cargo.toml
cdk/lambda/user-pool-triggers/: Cargo.toml
cdk/lib/: cdk-stack.ts  credentials-api.ts  distribution.ts  parameters.ts  secured-api.ts  session-store.ts  stack-outputs.ts  user-pool.ts
cdk/openapi/: credentials-api.json
cdk/scripts/: set-rp-origin.ts
passquito-cdk-construct/: .gitignore  README.md  package.json  rollup.config.mjs  tsconfig.json  tsconfig.types.json
passquito-cdk-construct/api/: passquito-cdk-construct.api.md
passquito-cdk-construct/api/markdown/: index.md  passquito-cdk-construct.credentialsapi._constructor_.md  passquito-cdk-construct.credentialsapi.basepath.md  passquito-cdk-construct.credentialsapi.cognitofacadelambda.md  passquito-cdk-construct.credentialsapi.credentialsapi.md  passquito-cdk-construct.credentialsapi.discoverablelambda.md  passquito-cdk-construct.credentialsapi.internalurl.md  passquito-cdk-construct.credentialsapi.md  passquito-cdk-construct.credentialsapi.normalizedbasepath.md  passquito-cdk-construct.credentialsapi.props.md  passquito-cdk-construct.credentialsapi.registrationlambda.md  passquito-cdk-construct.credentialsapi.securedlambda.md  passquito-cdk-construct.credentialsapiprops.alloworigins.md  passquito-cdk-construct.credentialsapiprops.basepath.md  passquito-cdk-construct.credentialsapiprops.md  passquito-cdk-construct.credentialsapiprops.parameters.md  passquito-cdk-construct.credentialsapiprops.sessionstore.md  passquito-cdk-construct.credentialsapiprops.ssmparameters.md  passquito-cdk-construct.credentialsapiprops.userpool.md  passquito-cdk-construct.md  passquito-cdk-construct.passquitocore._constructor_.md  passquito-cdk-construct.passquitocore.appcontentsbucketname.md  passquito-cdk-construct.passquitocore.appurl.md  passquito-cdk-construct.passquitocore.credentialsapi.md  passquito-cdk-construct.passquitocore.credentialsapiinternalurl.md  passquito-cdk-construct.passquitocore.distribution.md  passquito-cdk-construct.passquitocore.distributiondomainname.md  passquito-cdk-construct.passquitocore.md  passquito-cdk-construct.passquitocore.parameters.md  passquito-cdk-construct.passquitocore.rporiginparameterpath.md  passquito-cdk-construct.passquitocore.sessionstore.md  passquito-cdk-construct.passquitocore.ssmparameters.md  passquito-cdk-construct.passquitocore.userpool.md  passquito-cdk-construct.passquitocore.userpoolclientid.md  passquito-cdk-construct.passquitocore.userpoolid.md  passquito-cdk-construct.passquitocoreprops.alloworigins.md  passquito-cdk-construct.passquitocoreprops.basepath.md  passquito-cdk-construct.passquitocoreprops.billingforcredentialstable.md  passquito-cdk-construct.passquitocoreprops.billingforcredentialtable.md  passquito-cdk-construct.passquitocoreprops.billingforsessiontable.md  (+10 more)
passquito-cdk-construct/lambda/authentication/: Cargo.toml
passquito-cdk-construct/lambda/authentication/src/: error.rs  error_response.rs  event.rs
passquito-cdk-construct/src/: credentials-api.ts  distribution.ts  index.ts  parameters.ts  passquito-core.ts  session-store.ts  ssm-parameters.ts  user-pool.ts
passquito-cdk-construct/test/: parameters.test.ts  ssm-parameters.test.ts
passquito-client-js/: README.md  api-extractor.json  package.json  rollup.config.mjs  tsconfig.json
passquito-client-js/api/: passquito-client-js.api.md
passquito-client-js/api/markdown/: index.md  passquito-client-js.apiresponse.md  passquito-client-js.apiresponse.ok.md  passquito-client-js.apiresponse.parse.md  passquito-client-js.apiresponse.status.md  passquito-client-js.apiresponse.text.md  passquito-client-js.authenticationsession.credentialrequestoptions.md  passquito-client-js.authenticationsession.md  passquito-client-js.authenticationsession.sessionid.md  passquito-client-js.checkpasskeyauthenticationsupported.md  passquito-client-js.checkpasskeyregistrationsupported.md  passquito-client-js.cognitotokens.accesstoken.md  passquito-client-js.cognitotokens.activatedat.md  passquito-client-js.cognitotokens.expiresin.md  passquito-client-js.cognitotokens.idtoken.md  passquito-client-js.cognitotokens.md  passquito-client-js.cognitotokens.refreshtoken.md  passquito-client-js.credentials.md  passquito-client-js.credentials.publickeyinfo.md  passquito-client-js.credentials.tokens.md  passquito-client-js.credentialsapi.finishauthentication.md  passquito-client-js.credentialsapi.finishregistration.md  passquito-client-js.credentialsapi.getdiscoverablecredentialrequestoptions.md  passquito-client-js.credentialsapi.md  passquito-client-js.credentialsapi.refreshtokens.md  passquito-client-js.credentialsapi.startauthentication.md  passquito-client-js.credentialsapi.startregistration.md  passquito-client-js.credentialsapiimpl._constructor_.md  (+44 more)
passquito-client-js/src/: credentials-api-impl.ts  credentials-api.ts  index.ts  passkey.ts  passquito-client.ts  types.ts
rp-server/: Cargo.toml  README.md
rp-server/src/: auth.rs  error.rs  lib.rs  main.rs  state.rs
(+2 files in other folders)
