[package]
name = "rp-server"
version = "0.1.0"
edition = "2021"
description = "Server part of the relying party on Web Authentication"
authors = ["Kikuo Emoto <kemoto@codemonger.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["http2"] }
cookie = "0.17"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.33", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
tower-sessions = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation", "preview-features", "resident-key-support"] }
webauthn-rs-proto = "0.4"
