[package]
name = "authentication"
version = "0.1.0"
edition = "2021"
description = "Web Authentication with Cognito"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.0"
aws-sdk-cognitoidentityprovider = "1.3"
aws-sdk-dynamodb = "1.3"
aws-sdk-ssm = "1.3"
aws_lambda_events = { version = "0.12", default-features = false, features = ["cognito"] }
base64 = "0.21"
getrandom = "0.2"
lambda_http = "0.8"
lambda_runtime = "0.8"
ring = "0.17.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
# webauthn-rs = { path = "../../../../third-party/webauthn-rs/webauthn-rs", features = ["danger-allow-state-serialisation", "preview-features", "resident-key-support"] }
webauthn-rs = { git = "https://github.com/codemonger-io/webauthn-rs.git", tag = "v0.5.0-wo-openssl.0", features = ["danger-allow-state-serialisation", "preview-features", "resident-key-support"] }
# webauthn-rs-proto = { path = "../../../../third-party/webauthn-rs/webauthn-rs-proto" }
webauthn-rs-proto = { git = "https://github.com/codemonger-io/webauthn-rs.git", tag = "v0.5.0-wo-openssl.0" }
