[package]
name = "authentication"
version = "0.1.0"
edition = "2021"
description = "Web Authentication with Cognito"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.5"
aws-sdk-cognitoidentityprovider = "1.58"
aws-sdk-dynamodb = "1.54"
aws-sdk-ssm = "1.55"
aws_lambda_events = { version = "0.15", default-features = false, features = ["cognito"] }
base64 = "0.22"
getrandom = "0.2"
lambda_http = "0.13"
lambda_runtime = "0.13"
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
# webauthn-rs = { path = "../../../../third-party/webauthn-rs/webauthn-rs", features = ["danger-allow-state-serialisation", "preview-features", "resident-key-support"] }
webauthn-rs = { git = "https://github.com/codemonger-io/webauthn-rs.git", tag = "v0.5.0-wo-openssl.0", features = ["conditional-ui", "danger-allow-state-serialisation", "resident-key-support"] }
# webauthn-rs-proto = { path = "../../../../third-party/webauthn-rs/webauthn-rs-proto" }
webauthn-rs-proto = { git = "https://github.com/codemonger-io/webauthn-rs.git", tag = "v0.5.0-wo-openssl.0" }

[dev-dependencies]
aws-sdk-cognitoidentityprovider = { version = "1.58", features = ["test-util"] }
aws-sdk-dynamodb = { version = "1.54", features = ["test-util"] }
aws-smithy-mocks-experimental = "0.2"
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
derive_builder = "0.20"
